fix: dark mode problem

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: rgba(31, 29, 29, 0.87);
   background-color: rgb(254, 254, 254);
 
